--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.erashop">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,14 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EraShop">
         <activity
+            android:name=".Activity.CartActivity"
+            android:exported="false"
+            android:parentActivityName=".Activity.MainActivity"/>
+        <activity
             android:name=".Activity.RegisterActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            />
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".Activity.LoginActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".Activity.OnBoardingActivity"
             android:exported="false" />
