--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+//    implementation 'com.github.Cutta:GifView:1.4'
+
+//    implementation "com.github.huynn109:increase_decrease_button:1.0.0"
+    implementation 'com.github.travijuu:numberpicker:1.0.7'
+
+//    implementation 'com.cepheuen.elegant-number-button:lib:1.0.3'
+
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
