--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.erashop">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EraShop">
+        android:theme="@style/Theme.EraShop"
+        tools:replace="android:theme">
+        <activity
+            android:name=".Activity.EnterOTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.TrackOrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ActivitySuccess"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.CheckOutActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.EditProfile"
             android:exported="false" />
