--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 
 //    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
+    implementation 'com.github.Cutta:GifView:1.6'
+
     implementation 'com.github.travijuu:numberpicker:1.0.7'
 
 }
