--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,11 @@ dependencies {
 
     implementation 'com.github.travijuu:numberpicker:1.0.7'
 
+// API
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
+
 }
