--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
 
     implementation 'com.github.travijuu:numberpicker:1.0.7'
 
+// lottie
+    implementation 'com.airbnb.android:lottie:5.2.0'
+
 // API
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
